--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
-language: java
-install: echo 'skip install'
-#script: mvn test -Djruby.versions=1.6.7.2 -Dargs=-nrails-3.2.x
-jdk:
-  - openjdk6
-  - openjdk7
+language: ruby
+rvm:
+#  - 1.8.7
+#  - 1.9.3
+#  - 2.0.0
+  - jruby-18mode # JRuby in 1.8 mode
+  - jruby-19mode # JRuby in 1.9 mode
+#  - rbx-18mode
+#  - rbx-19mode
+
